--- a/day11/css/style.css
+++ b/day11/css/style.css
@@ -1,5 +1,49 @@
 .box{
-    width: 40px;
-    height: 40px;
+    width: 100px;
+    height: 100px;
     background-color: blueviolet;
+}
+
+.box:hover{
+    width: 200px;
+    height: 200px;
+    background-color: royalblue;
+}
+
+.box:focus{
+    width: 200px;
+    height: 200px;
+    background-color: burlywood;
+}
+
+input:focus{
+    background-color: yellow;
+}
+
+img{
+    width: 400px;
+    height: 400px;
+    border: 3px solid palevioletred;
+}
+
+.fruits span:first-child{
+    color: red;
+}
+.fruits h3:last-child{
+    color: red;
+}
+.fruits *:nth-child(3){
+    color: blue;
+}
+
+/* ex03 */
+table{
+    border: 3px solid palevioletred;
+    text-align: center;
+}
+
+th, tr, td{
+    width: 100px;
+    height: 100px;;
+    border: 3px solid palevioletred;
 }
