--- a/day11/css/style.css
+++ b/day11/css/style.css
@@ -47,3 +47,8 @@ th, tr, td{
     height: 100px;;
     border: 3px solid palevioletred;
 }
+
+.bullet li {
+    display: none;
+    text-decoration: none;
+}
